# ThirdParty-SARibbon

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  SARibbon.pro  SARibbonBar.pri  changlog.md  common.pri  generate_vs2022.bat  mkdocs.yml  readme-cn.md  readme.md  requirements-docs.txt
.github/workflows/: cmake-linux-qt5.12.yml  cmake-linux-qt5.14.yml  cmake-linux-qt5.15.yml  cmake-linux-qt6.2.yml  cmake-linux-qt6.5.yml  cmake-linux-qt6.8.yml  cmake-mac-qt5.12.yml  cmake-mac-qt5.14.yml  cmake-mac-qt5.15.yml  cmake-mac-qt6.2.yml  cmake-mac-qt6.5.yml  cmake-mac-qt6.8.yml  cmake-win-qt5.12.yml  cmake-win-qt5.14.yml  cmake-win-qt5.15.yml  cmake-win-qt6.2.yml  cmake-win-qt6.5.yml  cmake-win-qt6.8.yml
docs/: index.html
docs/en/: faq.md  index.md
docs/en/build-guide/: build-3rdparty.md  build-SARibbon.md  build-instructions.md  common-build-errors.md  i18n.md
docs/en/use-guide/: SARibbon-size-settings.md  SARibbon-theme.md  SARibbon-user-guide.md  contents-margins-of-ribbon.md  create-ribbon-style-window.md  create-ribbon-ui.md  design-your-theme.md  import-SARibbon.md  layout-of-SARibbon.md  layout-of-ribbonbutton.md  persistence-configuration-ribbon.md  ribbon-interface-hierarchy.md  titlebar-setting.md
docs/stylesheets/: extra.css
docs/zh/: faq.md  index.md
docs/zh/build-guide/: build-3rdparty.md  build-SARibbon.md  build-instructions.md  common-build-errors.md  i18n.md
docs/zh/use-guide/: SARibbon-size-settings.md  SARibbon-theme.md  SARibbon-user-guide.md  contents-margins-of-ribbon.md  create-ribbon-style-window.md  create-ribbon-ui.md  design-your-theme.md  import-SARibbon.md  layout-of-SARibbon.md  layout-of-ribbonbutton.md  persistence-configuration-ribbon.md  ribbon-interface-hierarchy.md  titlebar-setting.md
example/MainWindowExample/: CMakeLists.txt  MainWindowExample.pro  main.cpp  mainwindow.cpp  mainwindow.h
example/MatlabUI/: CMakeLists.txt  MatlabUI.pro
example/MdiAreaWindowExample/: CMakeLists.txt  MdiAreaWindowExample.pro  main.cpp  mdimainwindow.cpp
example/NormalMenuBarExample/: CMakeLists.txt  MainWindow.cpp  NormalMenuBarExample.pro
example/StaticExample/: CMakeLists.txt  MainWindow.cpp  StaticExample.pro  main.cpp
example/UseNativeFrameExample/: CMakeLists.txt  UseNativeFrameExample.pro
example/WidgetWithRibbon/: CMakeLists.txt  RibbonWidget.cpp  WidgetWithRibbon.pro
example/uiform/: CMakeLists.txt
src/: SARibbon.cpp  SARibbon.h  SARibbon.pri
src/SARibbonBar/: CMakeLists.txt  SAFramelessHelper.cpp  SAFramelessHelper.h  SARibbonActionsManager.cpp  SARibbonActionsManager.h  SARibbonApplicationButton.cpp  SARibbonApplicationButton.h  SARibbonBar.cpp  SARibbonBar.h  SARibbonBar.pri  SARibbonBarLayout.cpp  SARibbonBarVersionInfo.h  SARibbonButtonGroupWidget.cpp  SARibbonButtonGroupWidget.h  SARibbonCategory.cpp  SARibbonCategory.h  SARibbonCategoryLayout.cpp  SARibbonCategoryLayout.h  SARibbonColorToolButton.cpp  SARibbonColorToolButton.h  SARibbonContextCategory.cpp  SARibbonContextCategory.h  SARibbonCtrlContainer.cpp  SARibbonCtrlContainer.h  SARibbonCustomizeData.cpp  SARibbonCustomizeData.h  SARibbonCustomizeDialog.cpp  SARibbonCustomizeDialog.h  SARibbonCustomizeWidget.cpp  SARibbonCustomizeWidget.h  SARibbonElementFactory.cpp  SARibbonElementFactory.h  SARibbonElementManager.cpp  SARibbonElementManager.h  SARibbonGallery.cpp  SARibbonGallery.h  SARibbonGalleryGroup.cpp  SARibbonGalleryGroup.h  SARibbonGalleryItem.cpp  SARibbonGalleryItem.h  (+26 more)
src/SARibbonBar/colorWidgets/: SAColorGridWidget.cpp  SAColorGridWidget.h  SAColorMenu.cpp  SAColorMenu.h  SAColorPaletteGridWidget.cpp  SAColorPaletteGridWidget.h  SAColorToolButton.cpp  SAColorWidgets.pri  SAColorWidgetsGlobal.h
src/SARibbonBar/i18n/: SARibbon_en_US.ts  SARibbon_zh_CN.ts
src/SARibbonBar/resource/: theme-win7.qss
tools/: qrc_SARibbonResource_Datas.cpp  qrc_SARibbonResource_version2.cpp  qrc_SARibbonResource_version3.cpp
tools/amalgamate/: SARibbonAmalgamTemplate.cpp  SARibbonAmalgamTemplatePublicHeaders.h
